# opentitan-demo

./: .gitmodules  README.rst  dodo.py  python-requirements.txt
sw/device/: meson.build
sw/device/apps/: meson.build
sw/device/apps/hello/: hello.c  meson.build
sw/device/libs/: meson.build
